--- a/views/compute.ejs
+++ b/views/compute.ejs
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <a href="/math/add">Calculator</a>
     <a href="/math/add">add</a>
     <a href="/math/divide">divide</a>
     <a href="/math/multiply">multiply</a>
@@ -21,7 +22,6 @@
     <%if (result || (typeof result === 'number' && !isNaN(result))) { %>
       <%= num1 %> <%= symbol %> <%= num2 %> = <%= result %>
     <% } %>
-
 
   </body>
 </html>
